Add license file

--- a/xroma.1
+++ b/xroma.1
@@ -52,5 +52,5 @@ Print the color information in hexadecimal format:
 \fBxroma\fR depends on the Xlib library.
 
 .SH LICENSE
-This program is licensed under the GPLv3 License - see the LICENSE file
+This program is licensed under the GPLv3 License - see the COPYING file
 for details.
